--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "test": "jest --coverage",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -16,24 +17,35 @@
     "@prismicio/react": "^2.5.0",
     "@prismicio/slice-simulator-react": "^0.2.2",
     "@stripe/stripe-js": "^1.36.0",
+    "@types/jest": "^29.4.0",
     "axios": "^0.27.2",
     "faunadb": "^4.6.0",
+    "jest-environment-jsdom": "^29.4.1",
     "next": "12.2.4",
-    "next-auth": "^4.10.3",
+    "next-auth": "^4.19.2",
     "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "sass": "^1.54.4",
-    "stripe": "^10.3.0"
+    "stripe": "^10.3.0",
+    "ts-jest": "^29.0.5"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^18.6.5",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^18.0.17",
+    "babel-jest": "^29.4.1",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.4.1",
+    "jest-dom": "^4.0.0",
+    "jest-mock": "^29.4.1",
     "slice-machine-ui": "^0.4.2",
     "typescript": "^4.7.4"
   }
