--- a/package.json
+++ b/package.json
@@ -10,17 +10,16 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
-    "@prismicio/client": "5.1.1",
-    "@prismicio/react": "^2.0.6",
+    "@prismicio/client": "^5.1.0",
     "@prismicio/slice-simulator-react": "^0.2.0",
     "@stripe/stripe-js": "^1.22.0",
     "axios": "^0.25.0",
     "faunadb": "^4.5.2",
-    "next": "12.0.8",
-    "next-auth": "^4.2.1",
+    "next": "^12.2.3",
+    "next-auth": "^4.8.0",
     "next-slicezone": "^0.2.0",
     "nextjs-progressbar": "^0.0.14",
-    "prismic-dom": "^2.2.7",
+    "prismic-dom": "^2.2.6",
     "prismic-reactjs": "^1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -30,9 +29,9 @@
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
-    "@types/node": "^17.0.12",
+    "@types/node": "^17.0.23",
     "@types/prismic-dom": "^2.1.1",
-    "@types/react": "^17.0.38",
+    "@types/react": "^16.9.43",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "slice-machine-ui": "^0.2.0",
